<resources>
    <string name="app_name">ContactMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_name">Contact Name...</string>
    <string name="hint_email">Contact Email</string>
    <string name="hint_number">Contact Number</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="empty_not_saved">Contact not saved because it is empty.</string>

</resources>