<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextPrimary"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/contact_name"
        style="@style/text_view_style"
        android:hint="@string/hint_name"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/contact_email"
        style="@style/text_view_style"
        android:hint="@string/hint_email"
        android:inputType="textAutoComplete|textEmailAddress" />

    <EditText
        android:id="@+id/contact_number"
        style="@style/text_view_style"
        android:hint="@string/hint_number"
        android:inputType="number" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_delete"
        style="@style/button_style"
        android:text="@string/button_delete" />
</LinearLayout>